--- a/build-aux/install.sh.in
+++ b/build-aux/install.sh.in
@@ -24,6 +24,7 @@ srcdir="@srcdir@"
 abs_top_srcdir="@abs_top_srcdir@"
 abs_top_builddir="@abs_top_builddir@"
 prefix=${prefix-@prefix@}
+VERSION=${VERSION-@VERSION@}
 
 . ${srcdest}build-aux/config.sh
 . ${srcdest}build-aux/trace.sh
