build: Split-off x86_mes-gcc build.
* build-aux/build-cc64.sh: New file.
* build-aux/build.sh.in[CC64]: Invoke it.
* build-aux/build-cc.sh: Remove x86_64-mes-gcc build.
* build-aux/GNUmakefile.in (x86_64-mes-gcc): New target.
* build-aux/build-x86_64-mes.sh: Build all scafffold files.

--- a/build-aux/GNUmakefile.in
+++ b/build-aux/GNUmakefile.in
@@ -90,6 +90,9 @@ gcc:
 mes-gcc:
 	${srcdest}build-aux/build-cc32.sh
 
+x86_64-mes-gcc:
+	${srcdest}build-aux/build-cc64.sh
+
 mes-tcc:
 ifdef TCC
 	CC32=$(TCC) ${srcdest}build-aux/build-cc32.sh
