mescc: Support --align, off by default.
* scripts/mescc.in (parse-opts): Add --align.
* module/mescc/mescc.scm (mescc:compile): Support --align, off by
default.
* module/mescc/M1.scm (infos->M1): Add #:align parameter.
(M1:merge-infos): Likewise.  Keep types.
(info->M1): Likewise.  Make alignment switchable.
* module/mescc/compile.scm (r->ident):  Do not clobber.
(ident-add): Likewise.
(clean-info): Keep types.
* module/mescc/i386/as.scm (i386:r->byte-label): New instruction.
* lib/x86-mes/x86.M1: Add instructions.
* lib/x86_64-mes/x86_64.M1: Add instructions.
* module/mescc/x86_64/as.scm (x86_64:r->byte-label,
x86_64:r->word-label, x86_64:r->long-label): New instruction.

--- a/scripts/mescc.in
+++ b/scripts/mescc.in
@@ -72,7 +72,8 @@ fi
 
 (define (parse-opts args)
   (let* ((option-spec
-          '((assemble (single-char #\c))
+          '((align)
+            (assemble (single-char #\c))
             (base-address (value #t))
             (compile (single-char #\S))
             (define (single-char #\D) (value #t))
@@ -98,6 +99,7 @@ fi
      (and (or help? usage?)
           (format (or (and usage? (current-error-port)) (current-output-port)) "\
 Usage: mescc [OPTION]... FILE...
+  --align            align globals
   -c                 preprocess, compile and assemble only; do not link
   --base-address=ADRRESS
                      use BaseAddress ADDRESS [0x1000000]
