build: Support make seed for x86_64.
* build-aux/GNUmakefile.in (seed): Support make seed for x86_64.
* build-aux/build-mes.sh[SEED]: Also build src/mes.S.
* build-aux/build-x86_64-mes.sh[SEED]: Also build src/mes.x86_64-mes.S.

--- a/build-aux/GNUmakefile.in
+++ b/build-aux/GNUmakefile.in
@@ -151,7 +151,7 @@ install:
 uninstall:
 	./uninstall.sh
 
-seed: all-go gcc mes-gcc mes-tcc
+seed: all-go gcc mes-gcc x86_64-mes-gcc mes-tcc
 	cd $(MES_SEED) && git reset --hard HEAD
 	$(MAKE) MES=guile MES_SEED= SEED=1 mes
 	cp -v lib/x86-mes/*.S $(MES_SEED)/x86-mes
@@ -160,6 +160,7 @@ seed: all-go gcc mes-gcc mes-tcc
 	cp -v lib/x86_64-mes/*.S $(MES_SEED)/x86_64-mes
 	cp -v src/mes.x86_64-mes-S $(MES_SEED)/x86_64-mes/mes.S
 	MES=$(GUILE) GUILE=$(GUILE) SEED=1 MES_SEED= ${srcdest}build-aux/build-mes.sh
+	MES=$(GUILE) GUILE=$(GUILE) SEED=1 MES_SEED= ${srcdest}build-aux/build-x86_64-mes.sh
 	cd $(MES_SEED) && MES_PREFIX=$(PWD) ./refresh.sh
 	MES=$(GUILE) GUILE=$(GUILE) SEED=1 ${srcdest}build-aux/build-mes.sh
 	cd $(MES_SEED) && MES_PREFIX=$(PWD) arch=x86_64-mes ./refresh.sh
