build: Simplify: cater for one compiler at a time.
* build-aux/build-cc.sh: Remove.
* build-aux/build-cc32.sh: Remove.
* build-aux/build-cc64.sh: Remove.
* build-aux/build-x86_64-mes.sh: Remove.
* build-aux/cc-mes.sh: Remove.
* build-aux/cc-x86_64-mes.sh: Remove.
* build-aux/cc32-mes.sh: Remove.
* build-aux/cc64-mes.sh: Remove.
* build-aux/test64.sh: Remove.
* build-aux/bootstrap-mes.sh: New file.
* build-aux/config.make.in: New file.
* build-aux/config.status.in: New file.
* build-aux/test-cc.sh: New file.
* .gitignore: Update.
* build-aux/GNUmakefile.in: Update.
* build-aux/build-guile.sh: Update.
* build-aux/build-mes.sh: Update.
* build-aux/build.sh.in: Update.
* build-aux/cc.sh: Update.
* build-aux/check-boot.sh: Update.
* build-aux/check-mes.sh: Update.
* build-aux/check-mescc.sh: Update.
* build-aux/check-tcc.sh: Update.
* build-aux/check.sh.in: Update.
* build-aux/config.sh: Update.
* build-aux/export.make: Update.
* build-aux/install.sh.in: Update.
* build-aux/pre-inst-env.in: Update.
* build-aux/test.sh: Update.
* build-aux/uninstall.sh.in: Update.
* configure: Update.
* configure.sh: Update.
* module/mescc/i386/as.scm: Update.
* module/mescc/preprocess.scm: Update.
* module/mescc/x86_64/as.scm: Update.
* scripts/mescc.in: Update.
* tests/psyntax.test: Update.

--- a/.gitignore
+++ b/.gitignore
@@ -30,13 +30,27 @@
 *.mini-M1
 *.mini-guile
 *.mini-hex2
+*.a
 *.o
 *.seed-out
 *.stderr
 *.stdout
+
 *.x86-out
+
+*.x86-mes-E
+*.x86-mes-S
+*.x86-mes-gcc-a
+*.x86-mes-gcc-o
+*.x86-mes-gcc-out
+*.x86-mes-gcc-stdout
+*.x86-mes-o
+*.x86-mes-out
+*.x86-mes-stdout
+
 *.x86_64-mes-E
 *.x86_64-mes-S
+*.x86_64-mes-gcc-a
 *.x86_64-mes-gcc-o
 *.x86_64-mes-gcc-out
 *.x86_64-mes-gcc-stdout
@@ -45,9 +59,28 @@
 *.x86_64-mes-stdout
 *.x86_64-out
 
+/lib/x86-mes/0exit-42
+/lib/x86-mes/exit-42
+
+/scaffold/argv
+/scaffold/hello
+/scaffold/main
+/scaffold/malloc
+/scaffold/micro-mes
+/scaffold/tiny-mes
+/scaffold/mini-mes
+
+/scaffold/x86-mes-*
+/scaffold/x86_64-mes-*
+
+/scaffold/tests/x86-mes-*
+/scaffold/tests/[0-9a][0-9a-z]-[^.]*
+
 /src/*.h
 /src/*.i
 /src/mes
+/src/x86-mes-mes
+/src/x86_64-mes-mes
 
 /.config.make
 /.store
@@ -75,16 +108,17 @@
 /doc/mescc.1
 /doc/version.texi
 
+/config.status
 /pre-inst-env
+/build.sh
+/check.sh
+/install.sh
+/uninstall.sh
 /mes/module/mes/boot-0.scm
 /scripts/mescc
 /doc/images/gcc-mesboot-graph.png
 /GNUmakefile
-/build.sh
-/check.sh
-/install.sh
 /pre-inst-env
-/uninstall.sh
 /doc/images/gcc-mesboot-graph.eps
 /doc/images/gcc-mesboot-graph.pdf
 /doc/web/
