--- a/scripts/mescc.in
+++ b/scripts/mescc.in
@@ -5,6 +5,10 @@ if [ "$V" = 2 ]; then
 fi
 prefix=${prefix-@prefix@}
 program_prefix=${program_prefix-@program_prefix@}
+MES_ARENA=${MES_ARENA-100000000}
+export MES_ARENA
+MES_STACK=${MES_STACK-500000}
+export MES_STACK
 MES_PREFIX=${MES_PREFIX-$prefix/share/mes}
 export MES_PREFIX
 mes_p=$(command -v mes)
