build: Support building with Gash.
* build-aux/install.sh: Replace variables with substitution.
* build-aux/bootstrap.sh: New file.
* configure: Substitute it.
* configure.sh: Likewise.  Be friendly to Gash.
* .gitignore: Ignore it.

--- a/scripts/mescc.in
+++ b/scripts/mescc.in
@@ -33,9 +33,10 @@ export MES_PREFIX
 
 MES=${MES-src/mes}
 
-exec ${SCHEME-$MES} \
+dir=$(dirname $0)
+${SCHEME-$MES} \
      --no-auto-compile\
      -e main\
      -L @guile_site_dir@\
      -C @guile_site_ccache_dir@\
-     $(dirname $0)/mescc.scm "$@"
+     $dir/mescc.scm "$@"
