--- a/build-aux/install.sh.in
+++ b/build-aux/install.sh.in
@@ -21,49 +21,33 @@
 set -e
 
 . ./config.status
-. ${srcdest}build-aux/config.sh
-. ${srcdest}build-aux/trace.sh
 
-SHELL=${SHELL-$(command -v sh)}
+mes_prefix=@prefix@/share/mes
 
 # use bash or lose if pipes fail
-[ -n "$BASH" ] && set -o pipefail
-
-MES_PREFIX=${MES_PREFIX-$prefix/share/mes}
-
-GUILE=${GUILE-$(command -v guile)} || true
-if [ -z "$GUILE" -o "$GUILE" = true ]; then
-    GUILE_EFFECTIVE_VERSION=${GUILE_EFFECTIVE_VERSION-2.2}
-else
-    GUILE_EFFECTIVE_VERSION=${GUILE_EFFECTIVE_VERSION-$(guile -c '(display (effective-version))')}
+if [ "$(basename $SHELL)" == bash ]; then
+   set -o pipefail
 fi
-bindir=$(eval echo ${bindir-$prefix/bin})
-datadir=$(eval echo ${datadir-$prefix/share})
-docdir=$(eval echo ${docdir-$datadir/doc/mes-$VERSION})
-infodir=$(eval echo ${infodir-$datadir/info})
-mandir=$(eval echo ${mandir-$datadir/man})
-moduledir=$(eval echo ${moduledir-$datadir/mes/module})
-guile_site_dir=$(eval echo ${guile_site_dir-$prefix/share/guile/site/$GUILE_EFFECTIVE_VERSION})
-guile_site_ccache_dir=$(eval echo ${guile_site_ccache_dir-$prefix/lib/guile/$GUILE_EFFECTIVE_VERSION/site-ccache})
 
-mkdir -p $DESTDIR$bindir
+mkdir -p $DESTDIR@bindir@
 if [ -f src/x86-mes-mes ]; then
-    cp src/x86-mes-mes $DESTDIR$bindir/mes
+    cp src/x86-mes-mes $DESTDIR@bindir@/mes
 fi
-cp scripts/mescc.scm $DESTDIR$bindir/mescc.scm
-cp scripts/mescc $DESTDIR$bindir/mescc
+cp scripts/mescc.scm $DESTDIR@bindir@/mescc.scm
+cp scripts/mescc $DESTDIR@bindir@/mescc
 
 sed \
-    -e "s,^#! /bin/sh,#! $SHELL," \
-    scripts/diff.scm > $DESTDIR$bindir/diff.scm
-chmod -w+x $DESTDIR$bindir/diff.scm
+    -e "s,^#! /bin/sh,#! @SHELL@," \
+    scripts/diff.scm > $DESTDIR@bindir@/diff.scm
+chmod -w+x $DESTDIR@bindir@/diff.scm
 
-mkdir -p $docdir
+mkdir -p $DESTDIR@docdir@
 
-if [ -n "$PERL" -a -n "$GIT" ]\
-       && $PERL -v > /dev/null\
-       && $GIT status > /dev/null; then
-    $PERL ${srcdest}build-aux/gitlog-to-changelog --srcdir=. > ChangeLog
+if [ -n "@PERL@" ]\
+       && [ -n "@GIT@" ]\
+       && @PERL@ -v > /dev/null\
+       && @GIT@ status > /dev/null; then
+    @PERL@ ${srcdest}build-aux/gitlog-to-changelog --srcdir=. > ChangeLog
 fi
 
 cp\
@@ -74,57 +58,57 @@ cp\
     INSTALL\
     NEWS\
     README\
-    $DESTDIR$docdir
+    $DESTDIR@docdir@
 
 if [ -f ChangeLog ]; then
-    cp ChangeLog $DESTDIR$docdir
+    cp ChangeLog $DESTDIR@docdir@
 else
-    cp ChangeLog $DESTDIR$docdir
+    cp ChangeLog $DESTDIR@docdir@
 fi
 
 if [ -f ChangeLog ]; then
-    cp ChangeLog $docdir
+    cp ChangeLog @docdir@
 else
-    cp ChangeLog $docdir
+    cp ChangeLog @docdir@
 fi
 
-mkdir -p $DESTDIR$MES_PREFIX
+mkdir -p $DESTDIR$mes_prefix
 if [ -z "$srcdest" ]; then
-    tar -cf- --exclude='*.E' --exclude='*.*-out' include lib | tar -xf- -C $DESTDIR$MES_PREFIX
-    tar -cf- --exclude='*.go' module | tar -xf- -C $DESTDIR$MES_PREFIX
-    tar -cf- --exclude='*.gcc*' --exclude='*.mes*' scaffold | tar -xf- -C $DESTDIR$MES_PREFIX
+    tar -cf- --exclude='*.E' --exclude='*.*-out' include lib | tar -xf- -C $DESTDIR$mes_prefix
+    tar -cf- --exclude='*.go' module | tar -xf- -C $DESTDIR$mes_prefix
+    tar -cf- --exclude='*.gcc*' --exclude='*.mes*' scaffold | tar -xf- -C $DESTDIR$mes_prefix
 else
-    tar -cf- -C ${srcdest} include lib | tar -xf- -C $DESTDIR$MES_PREFIX
-    tar -cf- -C lib --exclude='*.E' --exclude='*.*-out' | tar -xf- -C $DESTDIR$MES_PREFIX
-    tar -cf- -C ${srcdest} module | tar -xf- -C $DESTDIR$MES_PREFIX
-    tar -cf- -C ${srcdest} scaffold | tar -xf- -C $DESTDIR$MES_PREFIX
+    tar -cf- -C ${srcdest} include lib | tar -xf- -C $DESTDIR$mes_prefix
+    tar -cf- -C lib --exclude='*.E' --exclude='*.*-out' | tar -xf- -C $DESTDIR$mes_prefix
+    tar -cf- -C ${srcdest} module | tar -xf- -C $DESTDIR$mes_prefix
+    tar -cf- -C ${srcdest} scaffold | tar -xf- -C $DESTDIR$mes_prefix
 fi
-tar -cf- -C ${srcdest}mes module | tar -xf- -C $DESTDIR$MES_PREFIX
+tar -cf- -C ${srcdest}mes module | tar -xf- -C $DESTDIR$mes_prefix
 
 if [ -f src/mes.x86-mes-S ]; then
-    cp src/mes.x86-mes-S $DESTDIR$MES_PREFIX/lib/x86-mes/mes.S
+    cp src/mes.x86-mes-S $DESTDIR$mes_prefix/lib/x86-mes/mes.S
 fi
 if [ -f src/mes.x86_64-mes-S ]; then
-    cp src/mes.x86_64-mes-S $DESTDIR$MES_PREFIX/lib/x86_64-mes/mes.S
+    cp src/mes.x86_64-mes-S $DESTDIR$mes_prefix/lib/x86_64-mes/mes.S
 fi
 
-mkdir -p $DESTDIR$guile_site_dir
-mkdir -p $DESTDIR$guile_site_ccache_dir
-tar -cf- -C ${srcdest}module --exclude='*.go' . | tar -xf- -C $DESTDIR$guile_site_dir
-tar -cf- -C module --exclude='*.scm' . | tar -xf- -C $DESTDIR$guile_site_ccache_dir
+mkdir -p $DESTDIR@guile_site_dir@
+mkdir -p $DESTDIR@guile_site_ccache_dir@
+tar -cf- -C ${srcdest}module --exclude='*.go' . | tar -xf- -C $DESTDIR@guile_site_dir@
+tar -cf- -C module --exclude='*.scm' . | tar -xf- -C $DESTDIR@guile_site_ccache_dir@
 
 if [ -f doc/mes.info ]; then
-    mkdir -p $DESTDIR$infodir
-    tar -cf- doc/mes.info* doc/images | tar -xf- --strip-components=1 -C $DESTDIR$infodir
-    install-info --info-dir=$DESTDIR$infodir doc/mes.info
+    mkdir -p $DESTDIR@infodir@
+    tar -cf- doc/mes.info* doc/images | tar -xf- --strip-components=1 -C $DESTDIR@infodir@
+    install-info --info-dir=$DESTDIR@infodir@ doc/mes.info
 fi
 
 if [ -f doc/mes.1 ]; then
-    mkdir -p $DESTDIR$mandir/man1
-    cp doc/mes.1 $DESTDIR$mandir/man1/
+    mkdir -p $DESTDIR@mandir@/man1
+    cp doc/mes.1 $DESTDIR@mandir@/man1/
 fi
 
 if [ -f doc/mescc.1 ]; then
-    mkdir -p $DESTDIR$mandir/man1
-    cp doc/mescc.1 $DESTDIR$mandir/man1/
+    mkdir -p $DESTDIR@mandir@/man1
+    cp doc/mescc.1 $DESTDIR@mandir@/man1/
 fi
