mescc: Run without shell.
* mes/module/mescc.mes: New file.
* module/mescc.scm: Include it.
* scripts/mescc.scm.in: New file.
* scripts/mescc.in: Use it; Make pure shell.
* configure: Substitute it.
* configure.sh: Substitute it.
* build-aux/install.sh.in: Install it.

--- a/.gitignore
+++ b/.gitignore
@@ -115,6 +115,7 @@
 /install.sh
 /uninstall.sh
 /mes/module/mes/boot-0.scm
+/scripts/mescc.scm
 /scripts/mescc
 /doc/images/gcc-mesboot-graph.png
 /GNUmakefile
