build: Support running out-of-tree.
* build-aux/pre-inst-env.in (MES_PREFIX): Use absolute name.

--- a/build-aux/pre-inst-env.in
+++ b/build-aux/pre-inst-env.in
@@ -24,7 +24,7 @@ abs_top_builddir="@abs_top_builddir@"
 prefix=${prefix-@prefix@}
 program_prefix=${program_prefix-@program_prefix@}
 
-MES_PREFIX=${MES_PREFIX-${srcdest}mes}
+MES_PREFIX=${MES_PREFIX-${abs_top_srcdir}/mes}
 export MES_PREFIX
 
 GUILE_LOAD_COMPILED_PATH="$abs_top_builddir/scripts:$abs_top_builddir/module${GUILE_LOAD_COMPILED_PATH:+:}$GUILE_LOAD_COMPILED_PATH"
