core: Remove struct definitions for builtins, drop snarfing.
After making a change to the list of builtin functions, run

    cat src/*.i

and move the into

    src/mes.c:mes_builtins ()

and, or also after changing the list of fixed symbols in src/mes.c:mes_symbols (), do

    cat src/*.h > src/builtins.h

* build-aux/build.sh.in: Remove snarfing.
* build-aux/bootstrap.sh.in: Likewise.
* mes/module/mes/display.mes (display):
* mes/module/mes/type-0.mes (cell:type-alist): Remove <cell:function>.
(function?, builtin?): Remove.
* src/builtins.h: New file.
* src/mes.c (TFUNCTION): Remove.
(struct function): Remove.
(apply_builtin): Rewrite from call.
(mes_builtins): Rewrite.
(init_builtin, make_builtin_type, make_builtin, builtin_name,
builtin_arity, builtin, builtin_p, builtin_printer): New function.

--- a/.gitignore
+++ b/.gitignore
@@ -76,8 +76,30 @@
 /scaffold/tests/x86-mes-*
 /scaffold/tests/[0-9a][0-9a-z]-[^.]*
 
-/src/*.h
-/src/*.i
+/src/mes.mes.symbols.h
+/src/gc.mes.h
+/src/hash.mes.h
+/src/lib.mes.h
+/src/math.mes.h
+/src/mes.mes.h
+/src/module.mes.h
+/src/posix.mes.h
+/src/reader.mes.h
+/src/strings.mes.h
+/src/struct.mes.h
+/src/vector.mes.h
+/src/gc.mes.i
+/src/hash.mes.i
+/src/lib.mes.i
+/src/math.mes.i
+/src/mes.mes.i
+/src/module.mes.i
+/src/posix.mes.i
+/src/reader.mes.i
+/src/strings.mes.i
+/src/struct.mes.i
+/src/vector.mes.i
+
 /src/mes
 /src/x86-mes-mes
 /src/x86_64-mes-mes
