build: Remove mini-mes.
* scaffold/mini-mes.c: Remove.
* build-aux/build-mes.sh: Remove commented build instructions.
* .gitignore: Remove pattern.

--- a/.gitignore
+++ b/.gitignore
@@ -73,7 +73,6 @@
 /scaffold/main
 /scaffold/micro-mes
 /scaffold/tiny-mes
-/scaffold/mini-mes
 
 /scaffold/x86-mes-*
 /scaffold/x86_64-mes-*
@@ -155,3 +154,5 @@
 /doc/images/gcc-mesboot-graph.eps
 /doc/images/gcc-mesboot-graph.pdf
 /doc/web/
+/lib/x86_64-mes/0exit-42
+/lib/x86_64-mes/exit-42
