hurd: Initial support.
This adds minimal Hurd support by implementing the _exit function.

* AUTHORS: Update.
* .gitignore: Ignore a.out, core, .config.
* include/sys/wait.h (W_EXITCODE): New define.
* lib/gnu/x86-mes-gcc/crt1.c: New file.
* lib/gnu/x86-mes-gcc/mini.c: New file.
* lib/gnu/hurd-start.c: New file.
* lib/gnu/_exit.c: New file.
* include/gnu/syscall.h: New file.
* include/gnu/hurd.h: New file.
* lib/gnu/_exit.c: New file.
* lib/gnu/exec-startup-get-data.c: New file.
* lib/gnu/hurd-start.c: New file.
* lib/gnu/proc-mark-exit.c: New file.
* lib/gnu/syscall.c: New file.
* lib/gnu/task-get-special-port.c: New file.
* lib/gnu/task-terminate.c: New file.
* lib/gnu/vm-statistics.c: New file.
* build-aux/configure-lib.sh (libc_mini_SOURCES): Add Hurd sources.
* build-aux/build.sh.in (CPPFLAGS): Add lib to includes, to find linux
crt1.c.
* build-aux/test-c.sh: Always use at least -l c+mini for GNU.
* lib/tests/scaffold/30-exit-42.exit: New file.
* lib/tests/scaffold/30-exit-42.c: New test.
* build-aux/check-mescc.sh (TESTS): Add it.
* lib/tests/scaffold/30-exit-0.c (main): Move from 00-exit-0.c; Rewrite,
use _exit.
* include/gnu/hurd-types.h: Import from GNU C Library.
* include/mach/mach-init.h: Likewise.
* lib/mach/mach-init.c: Likewise.
* lib/mach/mach_host_self.S: Likewise.
* lib/mach/mach_msg_trap.S: Likewise.
* lib/mach/mach_reply_port.S: Likewise.
* lib/mach/mach_task_self.S: Likewise.
* lib/mach/mach_thread_self.S: Likewise.
* lib/mach/msg.c: Likewise.

--- a/build-aux/build.sh.in
+++ b/build-aux/build.sh.in
@@ -65,10 +65,17 @@ fi
 "
         AM_CPPFLAGS="
 -D HAVE_CONFIG_H=1
+-I ${srcdest}lib
 -I include
 -I ${srcdest}include
 -I ${srcdest}include/$mes_kernel/$mes_cpu
 "
+        if test $mes_kernel = gnu; then
+            AM_CPPFLAGS="$AM_CPPFLAGS
+-I /usr/include
+"
+        fi
+
         ${SHELL} ${srcdest}build-aux/build-lib.sh
         cp crt1.o ..
     fi
@@ -85,6 +92,7 @@ fi
 
     AM_CPPFLAGS="
 -D HAVE_CONFIG_H=1
+-I ${srcdest}lib
 -I include
 -I ${srcdest}include
 -I ${srcdest}include/$mes_kernel/$mes_cpu
@@ -108,6 +116,7 @@ fi
     fi
         AM_CPPFLAGS="
 -D HAVE_CONFIG_H=1
+-I ${srcdest}lib
 -I include
 -I ${srcdest}include
 -I ${srcdest}include/$mes_kernel/$mes_cpu
