doc: Release update.
* BLURB: Release update.
* HACKING: Remove roadmap.
* INSTALL: Release update.
* NEWS: Add 0.21 section.
* README: Release update.
* ROADMAP: New file.
* configure.sh: Release update.
* doc/announce/ANNOUNCE-0.21: New file.
* doc/mes.texi: Release update.

--- a/build-aux/install.sh.in
+++ b/build-aux/install.sh.in
@@ -67,9 +67,9 @@ cp\
     BOOTSTRAP\
     COPYING\
     HACKING\
-    INSTALL\
     NEWS\
     README\
+    ROADMAP\
     ${DESTDIR}${docdir}
 
 if test -f ChangeLog+; then
