--- a/build-aux/config.make.in
+++ b/build-aux/config.make.in
@@ -20,6 +20,8 @@ AR:=@AR@
 BASH:=@BASH@
 BLOOD_ELF:=@BLOOD_ELF@
 CC:=@CC@
+CFLAGS:=@CFLAGS@
+CPPFLAGS:=@CPPFLAGS@
 DIFF:=@DIFF@
 DOT:=@DOT@
 GIT:=@GIT@
@@ -29,6 +31,7 @@ GUILE_EFFECTIVE_VERSION:=@GUILE_EFFECTIVE_VERSION@
 GUIX:=@GUIX@
 HELP2MAN:=@HELP2MAN@
 HEX2:=@HEX2@
+LDFLAGS:=@LDFLAGS@
 MAKEINFO:=@MAKEINFO@
 M1:=@M1@
 MES_FOR_BUILD:=@MES_FOR_BUILD@
