--- a/build-aux/config.sh.in
+++ b/build-aux/config.sh.in
@@ -21,6 +21,8 @@ AR=${AR-"@AR@"}
 BASH="@BASH@"
 BLOOD_ELF="@BLOOD_ELF@"
 CC=${CC-"@CC@"}
+CFLAGS=${CFLAGS-"@CFLAGS@"}
+CPPFLAGS=${CPPFLAGS-"@CPPFLAGS@"}
 DIFF=${DIFF-@DIFF@}
 DOT="@DOT@"
 GIT="@GIT@"
@@ -30,6 +32,7 @@ GUILE_EFFECTIVE_VERSION="@GUILE_EFFECTIVE_VERSION@"
 GUIX="@GUIX@"
 HELP2MAN="@HELP2MAN@"
 HEX2="@HEX2@"
+LDFLAGS=${LDFLAGS-"@LDFLAGS@"}
 MAKEINFO="@MAKEINFO@"
 M1="@M1@"
 MES_FOR_BUILD="@MES_FOR_BUILD@"
