--- a/build-aux/build.sh.in
+++ b/build-aux/build.sh.in
@@ -48,14 +48,12 @@ if test -n "$GUILE" -a "$GUILE" != true; then
     ${SHELL} ${srcdest}build-aux/build-guile.sh
 fi
 
-debug=${debug--g}
-
-AM_CFLAGS="
--static
-$debug
-"
+AM_CFLAGS=
 
 if test $mes_libc = mes; then
+    AM_CFLAGS="
+-static
+"
     AM_CFLAGS="$AM_CFLAGS
 -nostdinc
 -nostdlib
@@ -71,7 +69,6 @@ AM_CPPFLAGS="
 "
 
 AM_LDFLAGS="
-$debug
 -L .
 "
 if test $mes_libc = mes; then
