build: Support toplevel lib and mes builds.
* build-aux/build.sh.in: Add missing libdir for gcc build.
* build-aux/config.sh.in: ...here.
* build-aux/build-mes.sh: Do not overwrite srcdest, V.

--- a/build-aux/build.sh.in
+++ b/build-aux/build.sh.in
@@ -58,6 +58,9 @@ fi
         srcdir=../
     fi
     if test $compiler = gcc; then
+        AM_LDFLAGS="$AM_LDFLAGS
+-L gcc-lib
+"
         AM_CPPFLAGS="
 -D HAVE_CONFIG_H=1
 -I include
